--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,27 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
 
 # production
 /build
 
-#files
-/src/constants.js
-
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
+# log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# IDE/editor settings
+.vscode/
+.idea/
+
+# OS-specific files
+Thumbs.db
+
